Fixed Spacing and Favicon

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -21,7 +21,7 @@ button {
 
 .container-fluid {
   padding: 0;
-  min-height: 100vh;
+
   width: 100%;
   background-color: #485461;
   background-image: linear-gradient(135deg, #485461 0%, #28313b 74%);
@@ -103,7 +103,7 @@ button {
   width: 100%;
   left: 0;
   z-index: 5;
-  overflow: hidden;
+  
   transform-origin: left;
   transform-style: preserve-3d;
   transition: 0.5s;
