--- a/assets/styles/voyage.scss
+++ b/assets/styles/voyage.scss
@@ -3,12 +3,10 @@
 {
   background-color: #485461;
   width: 30rem;
-  display: flex;
-  justify-content: space-around;
 }
 .card-body
 {
-  margin: 20px;
+  
   background-color: #28313b;
   border:solid 0.5px;
   border-color: #28313b;
